[project]
name = "openset-uav-sim"
version = "0.1.0"
description = "Simulation environment for open-set UAV RF signal identification."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.0",
]

[project.scripts]
openset-uav-sim = "openset_uav_sim.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

